--- a/css/master.css
+++ b/css/master.css
@@ -3,16 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*debug*/
-[class*="col-"] {
-  height: 100%;
-  border: solid 1px black;
-  }
 
-.row {
-  height: 100px;
-}
-/*debug*/
 #sfondofisso {
   background-color: #2c3e50;
   color: white;
@@ -21,10 +12,15 @@
   right: 0;
   left: 0;
   top: 0;
+  height: 80px;
 }
 
 #margine {
-  margin-top: 100px;
+  margin-top: 80px;
+}
+
+.distanze {
+  padding: 50px 0;
 }
 
 .sfondoverde {
@@ -38,4 +34,39 @@
 
 .sfondofooter {
   background-color: #1a252f;
+}
+
+.start {
+  text-align: left;
+  line-height: 80px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.linknav {
+  color: white;
+}
+
+.linknav:hover {
+  text-decoration: none;
+  color: #18bc9c;
+}
+
+.difianco {
+  display: inline;
+  padding: 0 5px;
+}
+
+#tabellanavbar {
+  text-align: right;
+  line-height: 80px;
+  font-size: 15px;
+}
+
+.centro {
+  text-align: center;
+}
+
+.imgjumbotron  {
+  max-width: 250px;
 }
