--- a/css/master.css
+++ b/css/master.css
@@ -38,14 +38,14 @@ p {
 
 .linee {
   display: inline-block;
-  width: 10%;
+  width: 15%;
   margin: 0;
   margin: 8px 8px;
-  border-top: solid 3px ;
+  border-top: solid 4px ;
 }
 
 .lineebianche {
-  border-top: solid 3px white;
+  border-top: solid 4px white;
 }
 
 .distanze {
@@ -69,18 +69,13 @@ p {
   background-color: #1a252f;
 }
 
-.difianco {
-  display: inline;
-  padding: 0 5px;
-}
-
 .centro {
   text-align: center;
 }
 /* general */
 
 
-
+/* navbar */
 #sfondofisso {
   background-color: #2c3e50;
   color: white;
@@ -91,6 +86,52 @@ p {
   top: 0;
   height: 80px;
 }
+
+#sfondofisso .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  border-color: #2c3e50;
+}
+
+#sfondofisso .navbar-default {
+  background-color: #2c3e50;
+  border-color: #2c3e50;
+}
+
+#sfondofisso a {
+ color: white;
+}
+
+#sfondofisso .navbar-default .navbar-brand:focus,  #sfondofisso .navbar-default .navbar-brand:hover {
+  color: #18bc9c;
+}
+
+#sfondofisso .navbar-default .navbar-nav > li > a:focus, #sfondofisso .navbar-default .navbar-nav > li > a:hover {
+  color: #18bc9c;
+}
+
+#sfondofisso .navbar-toggle {
+  background-color: #18bc9c;
+  padding: 9px 10px;
+  border: 1px solid #18bc9c;
+  margin-top: 14px;
+}
+
+#sfondofisso .navbar-toggle:hover {
+  background-color: #148f77;
+  border: 1px solid #148f77;
+}
+
+#bs-example-navbar-collapse-1 {
+  margin-top: 10px
+}
+
+#sfondofisso .navbar-brand {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+
+/* navbar */
 
 .img6 {
   width: 100%;
@@ -129,7 +170,7 @@ p {
 }
 
 .stellina {
-  font-size: 25px;
+  font-size: 30px;
 }
 
 .btndownload {
@@ -137,6 +178,7 @@ p {
   border-color: white;
   color: white;
   font-size: 20px;
+  padding: 18px 23px;
 }
 
 .sfondoverde .btn-default:hover {
@@ -150,7 +192,16 @@ p {
   border-bottom: solid 1px #ccc;
   box-shadow: none;
   border-radius: 0px;
-  font-size: 20px;
+  font-size: 25px;
+}
+
+#contatti .form-control::placeholder {
+  color: #6c757d;
+}
+
+#contatti .form-control {
+  height: auto;
+  padding : 25px 0;
 }
 
 .btnform {
@@ -171,22 +222,26 @@ p {
 /* footer */
 .bordo {
   display: inline-block;
-  border: solid 1px white;
+  border: solid 2px white;
   border-radius: 50%;
-  padding: 6px 12px;
+  padding: 10px 16px;
   margin: 5px 5px;
 }
 
 .bordogp {
-  padding: 6px 4px;
+  padding: 10px 8px;
 }
 
 .bordotw {
-  padding: 6px 7px;
+  padding: 10px 12px;
 }
 
 .bordoin {
-  padding: 6px 9px;
+  padding: 10px 15px;
+}
+
+.sfondoblu span {
+  font-size: 22px;
 }
 
 .fab {
